various fixes to footnotes

--- a/01_agama/samyukta/01/SA1_154.md
+++ b/01_agama/samyukta/01/SA1_154.md
@@ -19,7 +19,7 @@ next: SA1_155.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.10a5'>爾時，世尊告諸比丘： 「有七處善、三種觀義，盡於此法得漏盡，得無漏。 心解脫，慧解脫。 現法，自知、身作證具足住： 『我生已盡，梵行已立，所作已作。』 自知不受後有。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “All who have skill in seven standpoints and three ways of investigating meaning will attain the end of the contaminants from this teaching. They will be liberated in mind and liberated in wisdom. In the present life, they will fully dwell in their own knowledge and direct experience: ‘My births have been ended, the religious life has been established, and the task has been accomplished.’ They themselves will know that they won’t be subject to another existence.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “All who have skill in seven standpoints and three ways of investigating meaning will attain the end of the contaminants from this teaching. They will be liberated in mind and liberated in wisdom. In the present life, they will fully dwell in their own knowledge and direct experience: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves will know that they won’t be subject to another existence.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.10a8'>「云何比丘七處善？ 比丘如實知色⋯色集⋯色滅⋯色滅道跡⋯色味⋯色患⋯色離如實知。 如是受、想、行、識⋯ 識集⋯識滅⋯識滅道跡⋯識味⋯識患⋯識離如實知。</td>
@@ -175,7 +175,7 @@ next: SA1_155.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.10c13'>「是名比丘七處善、三種觀義。 盡於此法得漏盡，得無漏。 心解脫、慧解脫。 現法，自知、身作證具足住： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
-    <td id='p41'>41. “This is called a monk’s skill in seven standpoints and three ways of investigating meaning. All who have them will attain the end of the contaminants from this teaching. They will be liberated in mind and liberated in wisdom. In the present life, they will fully dwell in their own knowledge and direct experience: ‘My births have been ended, the religious life has been established, and the task has been accomplished.’ They themselves will know they won’t be subject to another existence.</td>
+    <td id='p41'>41. “This is called a monk’s skill in seven standpoints and three ways of investigating meaning. All who have them will attain the end of the contaminants from this teaching. They will be liberated in mind and liberated in wisdom. In the present life, they will fully dwell in their own knowledge and direct experience: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves will know they won’t be subject to another existence.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.10c17'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -188,14 +188,14 @@ next: SA1_155.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 42 in the <cite>Taisho</cite> edition and no. 154 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0010a04" target="_blank">T99.2.10a4-c18</a>). It has the same outline as <a href="https://suttacentral.net/sn22.57" target="_blank">SN 22.57</a>, but some of the details in the explanations are different. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>taking delight</em>. C. 愛喜. In previous <em>sūtra</em>s, this C. term was parallel to P. <em>abhinandati</em>. Lit., it means “craving delight” or “delight of craving.”</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 42 in the <cite>Taisho</cite> edition and no. 154 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0010a04" target="_blank">T99.2.10a4-c18</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0151a12" target="_blank">Y30.151a12-4a2</a>). It has the same outline as <a href="https://suttacentral.net/sn22.57" target="_blank">SN 22.57</a>, but some of the details in the explanations are different. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>taking delight</em>. C. <span class="ch">愛喜</span>. In previous <em>sūtra</em>s, this C. term was parallel to P. <em>abhinandati</em>. Lit., it means “craving delight” or “delight of craving.”</p>
 <p>In SN 22.57, the origination of food is the origination of form (P. <em>āhārasamudayā rūpasamudayo</em>). It would seem that in the Theravāda tradition, form was interpreted here as the body, and so it would originate from being fed sustenance. Yet, form was just prior defined as any form made of the four elements. Here in SĀ, the reference goes back to a theme found in other SĀ 1 and SN 22 <em>sūtra</em>s (e.g. <a href="SA1_10.html">SĀ 1.10</a> and <a href="https://suttacentral.net/sn22.29">SN 22.29</a>) and perhaps the four noble truths. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>joy and happiness</em>. C. 喜、樂. In SN 22.57, the equivalent is pleasure and happiness (P. <em>sukhaṁ somanassaṁ</em>). Here, the C. terms are the same as the joy and happiness experienced in the four meditations, which in Pali are <em>pīti</em> and <em>sukha</em>. I have translated the terms here in the same way as I do in that context. [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p><em>taming desire and greed, ending desire and greed, and going beyond desire and greed for forms</em>. C. 調伏欲、貪，斷欲、貪，越欲、貪. In SN 22.57, the equivalent is removing desire and greed and giving up desire and greed (P. <em>chandarāgavinayo chandarāgappahānaṁ</em>). The only verb that the C. shares with SN 22.57 is “giving up” or “ending” (C. 斷 = P. <em>pahāna</em>), but the basic idea is obviously the same. It’s just elaborated differently. [<a href="#ref4">back</a>]</p></li>
+<li id="n3"><p><em>joy and happiness</em>. C. <span class="ch">喜、樂</span>. In SN 22.57, the equivalent is pleasure and happiness (P. <em>sukhaṁ somanassaṁ</em>). Here, the C. terms are the same as the joy and happiness experienced in the four meditations, which in Pali are <em>pīti</em> and <em>sukha</em>. I have translated the terms here in the same way as I do in that context. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>taming desire and greed, ending desire and greed, and going beyond desire and greed for forms</em>. C. <span class="ch">調伏欲、貪，斷欲、貪，越欲、貪</span>. In SN 22.57, the equivalent is removing desire and greed and giving up desire and greed (P. <em>chandarāgavinayo chandarāgappahānaṁ</em>). The only verb that the C. shares with SN 22.57 is “giving up” or “ending” (C. <span class="ch">斷</span> = P. <em>pahāna</em>), but the basic idea is obviously the same. It’s just elaborated differently. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p>SN 22.57 has an refrain that concludes each of the five aggregates, which reads: “Those ascetics and brahmins who have directly known form in this way—and its origin, its cessation, and the practice that leads to its cessation; its gratification, drawback, and escape—and are practicing for disillusionment, dispassion, and cessation regarding form: they are practicing well. Those who practice well have a firm footing in this teaching and training. Those ascetics and brahmins who have directly known form in this way—and its origin, its cessation, and the practice that leads to its cessation; its gratification, drawback, and escape—and due to disillusionment, dispassion, and cessation regarding form, are freed by not grasping: they are well freed. Those who are well freed are consummate ones. For consummate ones, there is no cycle of rebirths to be found.” (<em>Ye suppaṭipannā, te imasmiṁ dhammavinaye gādhanti. Ye ca kho keci, bhikkhave, samaṇā vā brāhmaṇā vā evaṁ rūpaṁ abhiññāya, evaṁ rūpasamudayaṁ abhiññāya, evaṁ rūpanirodhaṁ abhiññāya, evaṁ rūpanirodhagāminiṁ paṭipadaṁ abhiññāya; evaṁ rūpassa assādaṁ abhiññāya, evaṁ rūpassa ādīnavaṁ abhiññāya, evaṁ rūpassa nissaraṇaṁ abhiññāya rūpassa nibbidā virāgā nirodhā anupādā vimuttā, te suvimuttā. Ye suvimuttā, te kevalino. Ye kevalino vaṭṭaṁ tesaṁ natthi paññāpanāya.</em>).</p>
 <p>This is not found here in SĀ, but it shares the same basic message as the introduction and conclusion to this <em>sūtra</em>, which describes how a monk can become an <em>arhat</em> and be freed from rebirth by following this method. [<a href="#ref5">back</a>]</p></li>
-<li id="n6"><p><em>aggregates, elements, and senses</em>. C. 陰、界、入. In SN 22.57, the three things investigated are the elements, senses, and dependent origination (<em>dhātuso upaparikkhati, āyatanaso upaparikkhati, paṭiccasamuppādaso upaparikkhati</em>). [<a href="#ref6">back</a>]</p></li>
+<li id="n6"><p><em>aggregates, elements, and senses</em>. C. <span class="ch">陰、界、入</span>. In SN 22.57, the three things investigated are the elements, senses, and dependent origination (<em>dhātuso upaparikkhati, āyatanaso upaparikkhati, paṭiccasamuppādaso upaparikkhati</em>). [<a href="#ref6">back</a>]</p></li>
 </ol>
 <hr/>
 
