--- a/01_agama/samyukta/01/SA1_155.md
+++ b/01_agama/samyukta/01/SA1_155.md
@@ -27,19 +27,19 @@ next: SA1_156.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.10c22'>佛告比丘： 「云何取故生著？ 愚癡、無聞凡夫於色見是我、異我、相在。 見色是我、我所而取。 取已，彼色若變、若異，心亦隨轉。 心隨轉已，亦生取著，攝受心住。 攝受心住故，則生恐怖、障礙、心亂，以取著故。</td>
-    <td id='p3'>3. The Buddha told the monks, “How does attachment arise because of grasping? A foolish and unlearned ordinary man sees form as self, different than self, or either as being present in the other. Seeing form as self or belonging to self, he grasps it. If that form changes or becomes different after he grasps it, his mind also changes along with it. Once his mind changes along with it, this also produces grasping and attachment as he accepts a mental abode.<sup id="ref2"><a href="#n2">2</a></sup> Fear then arises along with obstructions and confusion because of accepting that mental abode, which is itself because of grasping and attachment.</td>
+    <td id='p3'>3. The Buddha told the monks, “How does attachment arise because of grasping? A foolish and unlearned ordinary man sees form as self, different than self, or either being present in the other. Seeing form as self or belonging to self, he grasps it. If that form changes or becomes different after he grasps it, his mind also changes along with it. Once his mind changes along with it, this also produces grasping and attachment as he accepts a mental abode.<sup id="ref2"><a href="#n2">2</a></sup> Fear then arises along with obstructions and confusion because of accepting that mental abode, which is itself because of grasping and attachment.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.10c26'>「愚癡、無聞凡夫於受⋯想⋯行⋯識，見我、異我、相在。 見識是我、我所而取。 取已，彼識若變、若異，彼心隨轉。 心隨轉故，則生取著攝受心住。 住已，則生恐怖、障礙、心亂，以取著故。 是名取著。</td>
-    <td id='p4'>4. “A foolish and unlearned ordinary man sees feeling … conception … volition … awareness as self, different than self, or either as being present in the other. Seeing awareness as self or belonging to self, he grasps it. If that awareness changes or becomes different after he grasps it, his mind also changes along with it. Once his mind changes along with it, this also produces grasping and attachment as he accepts a mental abode. Fear then arises along with obstructions and confusion because of accepting that mental abode, which is itself because of grasping and attachment. This is called grasping and attachment.”</td>
+    <td id='p4'>4. “A foolish and unlearned ordinary man sees feeling … conception … volition … awareness as self, different than self, or either being present in the other. Seeing awareness as self or belonging to self, he grasps it. If that awareness changes or becomes different after he grasps it, his mind also changes along with it. Once his mind changes along with it, this also produces grasping and attachment as he accepts a mental abode. Fear then arises along with obstructions and confusion because of accepting that mental abode, which is itself because of grasping and attachment. This is called grasping and attachment.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11a1'>「云何名不取、不著？ 多聞聖弟子於色不見我、異我、相在。 於色不見我、我所而取。 不見我、我所而取色，彼色若變、若異，心不隨轉。 心不隨轉故，不生取著攝受心住。 不攝受住故，則不生恐怖、障礙、心亂，不取著故。</td>
-    <td id='p5'>5. “What is called not grasping and not being attached? The well-versed noble disciple doesn’t see form as self, different than self, or either as being present in the other. Not seeing form as self or belonging to self, he grasps it. If that form changes or becomes different after he grasps it while not seeing it as self or belonging to self, his mind doesn’t change along with it. This doesn’t produce grasping or attachment, nor does he accept a mental abode because his mind doesn’t change along with it. Fear doesn’t arise with obstructions and confusion because he doesn’t accept this [mental] abode, which is because he doesn’t grasp or become attached to it.</td>
+    <td id='p5'>5. “What is called not grasping and not being attached? The well-versed noble disciple doesn’t see form as self, different than self, or either being present in the other. Not seeing form as self or belonging to self, he grasps it. If that form changes or becomes different after he grasps it while not seeing it as self or belonging to self, his mind doesn’t change along with it. This doesn’t produce grasping or attachment, nor does he accept a mental abode because his mind doesn’t change along with it. Fear doesn’t arise with obstructions and confusion because he doesn’t accept this [mental] abode, which is because he doesn’t grasp or become attached to it.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11a6'>「如是受⋯想⋯行⋯識，不見我、異我、相在。 不見我、我所而取，彼識若變、若異，心不隨轉。 心不隨轉故，不取著、攝受心住。 不攝受心住故，心不恐怖、障礙、心亂，以不取著故。 是名不取著。</td>
-    <td id='p6'>6. “<em>It’s the same with feeling, conception, volition, and awareness</em> … He doesn’t see it as self, different than self, or either as being present in the other. If that awareness changes or becomes different after he grasps it while not seeing it as self or belonging to self, his mind doesn’t change along with it. This doesn’t produce grasping or attachment, nor does he accept a mental abode because his mind doesn’t change along with it. Fear doesn’t arise with obstructions or confusion because he doesn’t accept this mental abode, which is because he doesn’t grasp or become attached to it. This is called not grasping or becoming attached.</td>
+    <td id='p6'>6. “<em>It’s the same with feeling, conception, volition, and awareness</em> … He doesn’t see it as self, different than self, or either being present in the other. If that awareness changes or becomes different after he grasps it while not seeing it as self or belonging to self, his mind doesn’t change along with it. This doesn’t produce grasping or attachment, nor does he accept a mental abode because his mind doesn’t change along with it. Fear doesn’t arise with obstructions or confusion because he doesn’t accept this mental abode, which is because he doesn’t grasp or become attached to it. This is called not grasping or becoming attached.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11a11'>「是名取著、不取著。」</td>
@@ -56,7 +56,7 @@ next: SA1_156.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 43 in the <cite>Taisho</cite> edition and no. 155 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0010c19" target="_blank">T99.2.10c19-11a12</a>). This and the next <em>sūtra</em> have a clear similarity with <a href="https://suttacentral.net/sn22.7" target="_blank">SN 22.7</a>-<a href="https://suttacentral.net/sn22.8" target="_blank">8</a>. In this version, fear is tangential to the subject of the lecture. Rather, the Buddha teaches how grasping leads to attachment, and fear is a result of this process. SN 22.7 is a closer match to this and the next <em>sūtra</em> than SN 22.8. All four appear to be variants of some older original. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 43 in the <cite>Taisho</cite> edition and no. 155 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0010c19" target="_blank">T99.2.10c19-11a12</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0154a10" target="_blank">Y30.154a10-5a7</a>). This and the next <em>sūtra</em> have a clear similarity with <a href="https://suttacentral.net/sn22.7" target="_blank">SN 22.7</a>-<a href="https://suttacentral.net/sn22.8" target="_blank">8</a>. In this version, fear is tangential to the subject of the lecture. Rather, the Buddha teaches how grasping leads to attachment, and fear is a result of this process. SN 22.7 is a closer match to this and the next <em>sūtra</em> than SN 22.8. All four appear to be variants of some older original. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>If that form changes … his mind also changes along with it … as he accepts a mental abode.</em> C. <span class="ch">彼色若變、若異，心亦隨轉。心隨轉已，亦生取著，攝受心住</span>, P. <em>Tassa taṁ rūpaṁ vipariṇamati aññathā hoti. Tassa rūpavipariṇāmaññathābhāvā rūpavipariṇāmānuparivatti viññāṇaṁ hoti.</em> I have translated the C. somewhat literally. The equiv. passage in SN 22.7 does not include the statement about accepting a mental abode (<span class="ch">攝受心住</span>), which is frustrating since the lit. reading seems awkward. However, it does tie into the idea of the other four aggregates forming a substrate on which awareness depends to continue to exist, which is found in <a href="SA1_151.html" target="_blank">SĀ 1.151</a> and <a href="SA1_152.html" target="_blank">152</a>. Here, the same idea is perhaps being related to the identification of the aggregates as being related to a self of some kind. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
