--- a/01_agama/samyukta/01/SA1_156.md
+++ b/01_agama/samyukta/01/SA1_156.md
@@ -40,7 +40,7 @@ next: SA1_157.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 44 in the <cite>Taisho</cite> edition and no. 156 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011a13" target="_blank">T99.2.11a13-29</a>). Like the previous <em>sūtra</em>, it has a clear similarity with <a href="https://suttacentral.net/sn22.7" target="_blank">SN 22.7</a>-<a href="https://suttacentral.net/sn22.8" target="_blank">8</a>, but fear is tangential to the subject of the lecture. Rather, the Buddha teaches how birth leads to being bound. SN 22.7 is a closer match to this and the previous <em>sūtra</em> than SN 22.8. All four appear to be variants of some older original. The theme of being born in bondage is found in <a href="https://suttacentral.net/sn22.117" target="_blank">SN 22.117</a>, but these two <em>sūtra</em>s bear little resemblance to each other beyond this. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 44 in the <cite>Taisho</cite> edition and no. 156 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011a13" target="_blank">T99.2.11a13-29</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0155a08" target="_blank">Y30.155a8-6a2</a>). Like the previous <em>sūtra</em>, it has a clear similarity with <a href="https://suttacentral.net/sn22.7" target="_blank">SN 22.7</a>-<a href="https://suttacentral.net/sn22.8" target="_blank">8</a>, but fear is tangential to the subject of the lecture. Rather, the Buddha teaches how birth leads to being bound. SN 22.7 is a closer match to this and the previous <em>sūtra</em> than SN 22.8. All four appear to be variants of some older original. The theme of being born in bondage is found in <a href="https://suttacentral.net/sn22.117" target="_blank">SN 22.117</a>, but these two <em>sūtra</em>s bear little resemblance to each other beyond this. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
