--- a/01_agama/samyukta/01/SA1_161.md
+++ b/01_agama/samyukta/01/SA1_161.md
@@ -14,23 +14,23 @@ next: SA1_162.html
   <th class='ch'>（四九） 阿難</th>
   <th class='en'>161 (49). Ānanda</th>
   <tr>
-    <td class="ch" title='t99.2.12a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.12a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a28'>爾時，世尊告尊者阿難曰： 「若信心長者、長者子來問汝言： 『於何等法知其生、滅？』 汝當云何答乎？」</td>
+    <td class='ch' title='t99.2.12a28'>爾時，世尊告尊者阿難曰： 「若信心長者、長者子來問汝言： 『於何等法知其生、滅？』 汝當云何答乎？」</td>
     <td id='p2'>2. It was then that the Bhagavān addressed Venerable Ānanda, “Suppose a faithful prominent man or a prominent man’s son were to come and ask you, ‘How shall I know the arising and ceasing of things?’ How would you answer him?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12b1'>阿難白佛： 「世尊，若有長者、長者子來問我者，我當答言： 『知色是生、滅法。 知受⋯想⋯行⋯識是生、滅法。』 世尊，若長者、長者子如是問者，我當如是答。」</td>
+    <td class='ch' title='t99.2.12b1'>阿難白佛： 「世尊，若有長者、長者子來問我者，我當答言： 『知色是生、滅法。 知受⋯想⋯行⋯識是生、滅法。』 世尊，若長者、長者子如是問者，我當如是答。」</td>
     <td id='p3'>3. Ānanda said to the Buddha, “Bhagavān, if some prominent man or a prominent man’s son were to come and ask me that, I would answer, ‘Know that form is something that arises and ceases. Know that feeling … conception … volition … awareness is something that arises and ceases.’ Bhagavān, if a prominent man or a prominent man’s son were to question me thus, I would answer him in this way.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12b4'>佛告阿難： 「善哉，善哉！應如是答。 所以者何？ 色是生、滅法。 受⋯想⋯行⋯識是生、滅法。 知色是生、滅法者，名為知色。 知受⋯想⋯行⋯識是生、滅法者，名為知識。」</td>
+    <td class='ch' title='t99.2.12b4'>佛告阿難： 「善哉，善哉！應如是答。 所以者何？ 色是生、滅法。 受⋯想⋯行⋯識是生、滅法。 知色是生、滅法者，名為知色。 知受⋯想⋯行⋯識是生、滅法者，名為知識。」</td>
     <td id='p4'>4. The Buddha told Ānanda, “Good, good! You should answer him in this way. Why is that? Form is something that arises and ceases. Feeling … conception … volition … awareness is something that arises and ceases. Knowing that form is something that arises and ceases is called knowing form. Knowing that feeling … conception … volition … awareness is something that arises and ceases is called knowing awareness.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12b8'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.12b8'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p5'>5. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -40,7 +40,7 @@ next: SA1_162.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 49 in the <cite>Taisho</cite> edition and no. 161 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a27" target="_blank">T99.2.12a27-b9</a>). It’s parallel with <a href="https://suttacentral.net/sn22.37" target="_blank">SN 22.37</a> and very similar to <a href="https://suttacentral.net/sn22.38" target="_blank">SN 22.38</a>. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 49 in the <cite>Taisho</cite> edition and no. 161 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a27" target="_blank">T99.2.12a27-b9</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0162a05" target="_blank">Y30.162a5-11</a>). It’s parallel with <a href="https://suttacentral.net/sn22.37" target="_blank">SN 22.37</a> and very similar to <a href="https://suttacentral.net/sn22.38" target="_blank">SN 22.38</a>. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
