--- a/01_agama/samyukta/01/SA1_157.md
+++ b/01_agama/samyukta/01/SA1_157.md
@@ -19,11 +19,11 @@ next: SA1_158.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.11b2'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰，受⋯想⋯行⋯識受陰。 若諸沙門、婆羅門見有我者，一切皆於此五受陰見我。 諸沙門、婆羅門見色是我，色異我，我在色，色在我。 見受⋯想⋯行⋯識是我，識異我，我在識，識在我。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. If ascetics and brahmins see some self, they all see these five acquired aggregates as self. Ascetics and brahmins see form as self, form as different than self, self as present in form, or form as present in self. They see feeling … conception … volition … awareness as self, awareness as different than self, self as present in awareness, or awareness as present in self.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form … feeling … conception … volition … and the acquired aggregate of awareness. If ascetics and brahmins see some self, they all see these five acquired aggregates as self. Ascetics and brahmins see form as self, form as different than self, self as present in form, or form as present in self. They see feeling … conception … volition … awareness as self, awareness as different than self, self as present in awareness, or awareness as present in self.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11b7'>「愚癡、無聞凡夫以無明故見色是我、異我、相在。 言『我真實不捨。 以不捨故，諸根增長。 諸根長已，增諸觸。 六觸入處所觸故。』 愚癡、無聞凡夫起苦樂覺，從觸入處起。 何等為六？ 謂眼觸入處⋯耳⋯鼻⋯舌⋯身⋯意觸入處。</td>
-    <td id='p3'>3. “Foolish and unlearned ordinary men see form as self, different than self, or either as being present in the other because of ignorance. They say, ‘Self really is not abandoned. The faculties grow because it wasn’t abandoned. Contacts increase because the faculties have grown. This is because of the things with which the six contacts of the senses make contact.’<sup id="ref2"><a href="#n2">2</a></sup> Those foolish and unlearned ordinary men have painful and pleasant experiences that are produced from contact with the senses. What are the six? They are the sense of visual contact … auditory … olfactory … gustatory … somatic … the sense of mental contact.</td>
+    <td id='p3'>3. “Foolish and unlearned ordinary men see form as self, different than self, or either being present in the other because of ignorance. They say, ‘Self really is not abandoned. The faculties grow because it wasn’t abandoned. Contacts increase because the faculties have grown. This is because of the things with which the six contacts of the senses make contact.’<sup id="ref2"><a href="#n2">2</a></sup> Those foolish and unlearned ordinary men have painful and pleasant experiences that are produced from contact with the senses. What are the six? They are the sense of visual contact … auditory … olfactory … gustatory … somatic … the sense of mental contact.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11b11'>「如是，比丘，有意界、法界、無明界，愚癡、無聞凡夫，無明觸故，起有覺、無覺、有無覺、『我勝』覺、『我等』覺、『我卑』覺、『我知我見』覺。 如是知、如是見覺，皆由六觸入故。</td>
@@ -44,7 +44,7 @@ next: SA1_158.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 45 in the <cite>Taisho</cite> edition and no. 157 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b01" target="_blank">T99.2.11b1-20</a>). It is very similar to <a href="https://suttacentral.net/sn22.47" target="_blank">SN 22.47</a>. A slightly different version of this <em>sūtra</em> is found at SĀ 1.60 (63). [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 45 in the <cite>Taisho</cite> edition and no. 157 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b01" target="_blank">T99.2.11b1-20</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0156a15" target="_blank">Y30.156a15-7a10</a>). It is very similar to <a href="https://suttacentral.net/sn22.47" target="_blank">SN 22.47</a>. A slightly different version of this <em>sūtra</em> is found at SĀ 1.60 (63). [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>six contacts of the senses</em>. C. <span class="ch">六觸入處</span>, P. <em>ṣaṭ phassa āyatana</em>, S. <em>channa sparśa āyatana</em>. This expression refers to the sensory experience that results when the sense faculties and their external objects come together. In SN 22.47, only five faculties are mentioned here, presumably because the mind faculty is mentioned separately in relation to ignorance in the next paragraph. Perhaps also because the five faculties aside from mind are physical and develop with the body. Here, all six are treated together as a group. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>experiences</em>. C. <span class="ch">覺</span>. It seems most likely that <span class="ch">覺</span> translated a word like P. <em>vedayitena</em>, which means feelings or experience. This qualifier is not included in the list found in SN 22.47. They are instead presented as quotations of what the ordinary person thinks. We should also note that the actual items in this list differ from those found in SN 22.47, which is a list of speculations about being reborn. Here, the speculations could include ideas about rebirth, but they seem existential in general. In SĀ 1.60 (63), the item “neither existence nor non-existence” is included to form the full tetralemma. [<a href="#ref3">back</a>]</p></li>
 </ol>
