--- a/01_agama/samyukta/01/SA1_159.md
+++ b/01_agama/samyukta/01/SA1_159.md
@@ -14,19 +14,19 @@ next: SA1_160.html
   <th class='ch'>（四七） 信</th>
   <th class='en'>159 (47). Faithful</th>
   <tr>
-    <td class="ch" title='t99.2.12a9'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.12a9'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a10'>爾時，世尊告諸比丘： 「信心善男子應作是念： 『我應隨順法。 我當於色多修厭離住，於受⋯想⋯行⋯識多修厭離住。』</td>
+    <td class='ch' title='t99.2.12a10'>爾時，世尊告諸比丘： 「信心善男子應作是念： 『我應隨順法。 我當於色多修厭離住，於受⋯想⋯行⋯識多修厭離住。』</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “A good son of faith<sup id="ref2"><a href="#n2">2</a></sup> should have this thought, ‘I should follow the Dharma. I must live often cultivating disillusionment with form … feeling … conception … volition … live often cultivating disillusionment with awareness.’<sup id="ref3"><a href="#n3">3</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a12'>「信心善男子即於色多修厭離住，於受⋯想⋯行⋯識多修厭離住。 故於色得厭，於受⋯想⋯行⋯識得厭。 厭已，離欲、解脫。 解脫知、見： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
-    <td id='p3'>3. “A good son of faith then often lives often cultivating disillusionment with form … feeling … conception … volition … lives often cultivating disillusionment with awareness. He therefore becomes disillusioned with form … feeling … conception … volition … becomes disillusioned with awareness. Once he’s disillusioned, he parts with desire for them and is liberated from  them. He knows and sees his liberation: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”<sup id="ref4"><a href="#n4">4</a></sup></td>
+    <td class='ch' title='t99.2.12a12'>「信心善男子即於色多修厭離住，於受⋯想⋯行⋯識多修厭離住。 故於色得厭，於受⋯想⋯行⋯識得厭。 厭已，離欲、解脫。 解脫知、見： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
+    <td id='p3'>3. “A good son of faith then often lives often cultivating disillusionment with form … feeling … conception … volition … lives often cultivating disillusionment with awareness. He therefore becomes disillusioned with form … feeling … conception … volition … becomes disillusioned with awareness. Once he’s disillusioned, he parts with desire for them and is liberated from  them. He knows and sees his liberation: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves know they won’t be subject to a later existence.’”<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a16'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.12a16'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,10 +36,10 @@ next: SA1_160.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">TThis is <em>sūtra</em> no. 47 in the <cite>Taisho</cite> edition and no. 159 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a09" target="_blank">T99.2.12a9-17</a>). It’s similar to <a href="https://suttacentral.net/sn22.146" target="_blank">SN 22.146</a> but represents a variant that uses the same basic formula. The tradition related to us by Asaṅga in the <cite>Yogācārabhūmi</cite> commentary on these SĀ sutras (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0795b25" target="_blank">T1579.30.795b25-c3</a>) indicates that this <em>sūtra</em> addresses the practice of a layman, while the next <em>sūtra</em> addresses that of someone who has left home. SN 22.146-150 all take someone who has gone forth as their subject. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>a good son of faith.</em> C. 信心善男子, P. <em>saddhāpabbajita kulaputta.</em> The P. parallel expression means “a good son who left home out of faith,” which implies that it describes a monk rather than a layman. The C. expression 信心 lit. means “faithful heart” or “thought.” [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>disillusionment.</em> C. 厭離, P. <em>nibbidābahula.</em> The P. expression is interpreted as meaning “full of disillusionment” in Pali-English references, but it’s of interest to note that <em>bahula</em> can mean “frequent” as well as “abundant.” The C. here adds a verb for cultivation to the sentence. [<a href="#ref3">back</a>]</li>
-<li id="n4">SN 22.146 concludes a bit differently: It says that disillusionment leads to complete understanding of the five aggregates, which in turns leads to being freed from them. Here, it’s the lack of desire for the aggregates that leads to liberation, presumably because it ends attachment to them. SN 22.146 also defines liberation as freedom from suffering rather than from a future existence. [<a href="#ref4">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 47 in the <cite>Taisho</cite> edition and no. 159 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a09" target="_blank">T99.2.12a9-17</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0161a01" target="_blank">Y30.161a1-6</a>). It’s similar to <a href="https://suttacentral.net/sn22.146" target="_blank">SN 22.146</a> but represents a variant that uses the same basic formula. The tradition related to us by Asaṅga in the <cite>Yogācārabhūmi</cite> commentary on these SĀ <em>sūtra</em>s (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0795b25" target="_blank">T1579.30.795b25-c3</a>) suggests that this <em>sūtra</em> addresses the practice of a layman, while the next <em>sūtra</em> addresses that of someone who has left home. SN 22.146-150 all take someone who has gone forth as their subject. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>a good son of faith.</em> C. <span class="ch">信心善男子</span>, P. <em>saddhāpabbajita kulaputta.</em> The P. parallel expression means “a good son who left home out of faith,” which indicates that it describes a monk rather than a layman. The C. expression <span class="ch">信心</span> lit. means “faithful heart” or “thought.” The next <em>sūtra</em> reads <span class="ch">信心善男子正信非家、出家</span>, which would be a more verbose version of the P. expression, where <span class="ch">正信非家、出家</span> means “being homeless and leaving home with correct faith”). Thus, 信心 is an added detail not found in SN 22.146-150. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>disillusionment.</em> C. <span class="ch">厭離</span>, P. <em>nibbidābahula.</em> The P. expression is interpreted as meaning “full of disillusionment” in Pali-English references, but it’s of interest to note that <em>bahula</em> can mean “frequent” as well as “abundant.” The C. here adds a verb for cultivation to the sentence. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>SN 22.146 concludes a bit differently: It says that disillusionment leads to complete understanding of the five aggregates, which in turns leads to being freed from them. Here, it’s the lack of desire for the aggregates that leads to liberation, presumably because it ends attachment to them. SN 22.146 also defines liberation as freedom from suffering rather than from a future existence. [<a href="#ref4">back</a>]</p></li>
 </ol>
 <hr/>
 
