--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -14,19 +14,19 @@ next: SA1_161.html
   <th class='ch'>（四八） 信</th>
   <th class='en'>160 (48). Faithful (2)</th>
   <tr>
-    <td class="ch" title='t99.2.12a18'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.12a18'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a19'>爾時，世尊告諸比丘： 「信心善男子正信非家、出家，自念： 『我應隨順法。 於色當多修厭住，於受⋯想⋯行⋯識多修厭住。』</td>
+    <td class='ch' title='t99.2.12a19'>爾時，世尊告諸比丘： 「信心善男子正信非家、出家，自念： 『我應隨順法。 於色當多修厭住，於受⋯想⋯行⋯識多修厭住。』</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “A good son of faith who is homeless and left home out of correct faith thinks to himself, ‘I should follow the Dharma. I must live often cultivating disillusionment with form … feeling … conception … volition … live often cultivating disillusionment with awareness.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a21'>「信心善男子正信非家出家，於色多修厭住，於受⋯想⋯行⋯識多修厭住已。 於色得離，於受⋯想⋯行⋯識得離。 我說是等，悉離一切生、老、病、死、憂、悲、惱、苦。」</td>
-    <td id='p3'>3. “A good son of faith who is homeless and left home out of correct faith then lives often cultivating disillusionment with form … feeling … conception … volition … lives often cultivating disillusionment with awareness. He can escape from form … feeling … conception … volition … can escape from awareness.<sup id="ref2"><a href="#n2">2</a></sup> I say that he will escape from all birth, old age, illness, death, grief, sorrow, pain, and trouble.”</td>
+    <td class='ch' title='t99.2.12a21'>「信心善男子正信非家出家，於色多修厭住，於受⋯想⋯行⋯識多修厭住已。 於色得離，於受⋯想⋯行⋯識得離。 我說是等，悉離一切生、老、病、死、憂、悲、惱、苦。」</td>
+    <td id='p3'>3. “A good son of faith who is homeless and left home out of correct faith then lives often cultivating disillusionment with form … feeling … conception … volition … lives often cultivating disillusionment with awareness. He can escape from form … feeling … conception … volition … can escape from awareness.<sup id="ref2"><a href="#n2">2</a></sup> I say that he will escape from all birth, old age, illness, death, sorrow, lamentation, pain, and trouble.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.12a25'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.12a25'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,8 +36,8 @@ next: SA1_161.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 48 in the <cite>Taisho</cite> edition and no. 160 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a18" target="_blank">T99.2.12a18-26</a>). It’s a closer parallel with <a href="https://suttacentral.net/sn22.146" target="_blank">SN 22.146</a> than the previous <em>sūtra</em>. See also the <a href="SA1_159.html" target="_blank">notes to the previous <em>sūtra</em></a> for some discussion of issues it has in common with the present text. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>escape.</em> C. 離. Or, perhaps, “secluded” or “separated” from the aggregates. There’s no direct parallel, and 離 can trans. several related Indic words. I lean toward reading is as a trans. of a word like P. <em>nissarati</em> (“to exit, escape, depart”), given that the context is liberation from suffering. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 48 in the <cite>Taisho</cite> edition and no. 160 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a18" target="_blank">T99.2.12a18-26</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0161a07" target="_blank">Y30.161a7-11</a>). It’s a closer parallel with <a href="https://suttacentral.net/sn22.146" target="_blank">SN 22.146</a> than the previous <em>sūtra</em>. See also the <a href="SA1_159.html" target="_blank">notes to the previous <em>sūtra</em></a> for some discussion of issues it has in common with the present text. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>escape.</em> C. <span class="ch">離</span>. Or, perhaps, “secluded” or “separated” from the aggregates. There’s no direct parallel, and <span class="ch">離</span> can trans. several related Indic words. I lean toward reading is as a trans. of a word like P. <em>nissarati</em> (“to exit, escape, depart”), given that the context is liberation from suffering. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
